{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 21,
  "lineage": "2228893f-0ccf-1331-6aea-1f3013167ea1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733206830852:subnet/subnet-ca99bcad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-ca99bcad",
            "map_public_ip_on_launch": true,
            "owner_id": "733206830852",
            "state": "available",
            "vpc_id": "vpc-83d4a5f9"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733206830852:subnet/subnet-3b391a15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-3b391a15",
            "map_public_ip_on_launch": true,
            "owner_id": "733206830852",
            "state": "available",
            "vpc_id": "vpc-83d4a5f9"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733206830852:subnet/subnet-87e216ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-87e216ca",
            "map_public_ip_on_launch": true,
            "owner_id": "733206830852",
            "state": "available",
            "vpc_id": "vpc-83d4a5f9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733206830852:vpc/vpc-83d4a5f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-e274ac9f",
            "default_route_table_id": "rtb-0b629e75",
            "default_security_group_id": "sg-a3c317ff",
            "dhcp_options_id": "dopt-a19381da",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-83d4a5f9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b629e75",
            "owner_id": "733206830852"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024582e76075564db",
            "arn": "arn:aws:ec2:us-east-1:733206830852:instance/i-0073832c044ebd889",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "c3-kubernetes-host",
            "id": "i-0073832c044ebd889",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "c3-kubernetes-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-09e1d5368270ebeca",
            "private_dns": "ip-172-31-4-20.ec2.internal",
            "private_ip": "172.31.4.20",
            "public_dns": "ec2-3-91-19-30.compute-1.amazonaws.com",
            "public_ip": "3.91.19.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-006118f5d59a1aad8",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "c3-kubernetes-common",
              "c3-kubernetes-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ca99bcad",
            "tags": {
              "Name": "c3-kubernetes-control_plane-1",
              "kubernetes.io/cluster/c3-kubernetes": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06eb91f3f3b07a82c",
              "sg-0b64bd73136611e8c"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024582e76075564db",
            "arn": "arn:aws:ec2:us-east-1:733206830852:instance/i-0711f50c85e6210da",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "c3-kubernetes-host",
            "id": "i-0711f50c85e6210da",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "c3-kubernetes-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c31c1019da7f4a60",
            "private_dns": "ip-172-31-95-44.ec2.internal",
            "private_ip": "172.31.95.44",
            "public_dns": "ec2-34-205-63-221.compute-1.amazonaws.com",
            "public_ip": "34.205.63.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0ab8267b74033faf3",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "c3-kubernetes-common",
              "c3-kubernetes-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3b391a15",
            "tags": {
              "Name": "c3-kubernetes-control_plane-2",
              "kubernetes.io/cluster/c3-kubernetes": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06eb91f3f3b07a82c",
              "sg-0b64bd73136611e8c"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024582e76075564db",
            "arn": "arn:aws:ec2:us-east-1:733206830852:instance/i-0c73a51219c5b7e09",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "c3-kubernetes-host",
            "id": "i-0c73a51219c5b7e09",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "c3-kubernetes-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0793b67ef1e35b0f3",
            "private_dns": "ip-172-31-22-134.ec2.internal",
            "private_ip": "172.31.22.134",
            "public_dns": "ec2-54-90-247-135.compute-1.amazonaws.com",
            "public_ip": "54.90.247.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-061869fe6e27cd5f5",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "c3-kubernetes-common",
              "c3-kubernetes-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-87e216ca",
            "tags": {
              "Name": "c3-kubernetes-control_plane-3",
              "kubernetes.io/cluster/c3-kubernetes": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06eb91f3f3b07a82c",
              "sg-0b64bd73136611e8c"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733206830852:loadbalancer/net/c3-kubernetes-api-lb/0d08414a388ef588",
            "arn_suffix": "net/c3-kubernetes-api-lb/0d08414a388ef588",
            "dns_name": "c3-kubernetes-api-lb-0d08414a388ef588.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:733206830852:loadbalancer/net/c3-kubernetes-api-lb/0d08414a388ef588",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "c3-kubernetes-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-3b391a15"
              },
              {
                "subnet_id": "subnet-87e216ca"
              },
              {
                "subnet_id": "subnet-ca99bcad"
              }
            ],
            "subnets": [
              "subnet-3b391a15",
              "subnet-87e216ca",
              "subnet-ca99bcad"
            ],
            "tags": {
              "Cluster": "c3-kubernetes",
              "kubernetes.io/cluster/c3-kubernetes": "shared"
            },
            "vpc_id": "vpc-83d4a5f9",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733206830852:listener/net/c3-kubernetes-api-lb/0d08414a388ef588/6acf6618dc121244",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733206830852:targetgroup/c3-kubernetes-api/7bca0c989b58ca81",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733206830852:listener/net/c3-kubernetes-api-lb/0d08414a388ef588/6acf6618dc121244",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:733206830852:loadbalancer/net/c3-kubernetes-api-lb/0d08414a388ef588",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733206830852:targetgroup/c3-kubernetes-api/7bca0c989b58ca81",
            "arn_suffix": "targetgroup/c3-kubernetes-api/7bca0c989b58ca81",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733206830852:targetgroup/c3-kubernetes-api/7bca0c989b58ca81",
            "lambda_multi_value_headers_enabled": false,
            "name": "c3-kubernetes-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-83d4a5f9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:733206830852:targetgroup/c3-kubernetes-api/7bca0c989b58ca81-20190915230027320100000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733206830852:targetgroup/c3-kubernetes-api/7bca0c989b58ca81",
            "target_id": "i-0073832c044ebd889"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:733206830852:targetgroup/c3-kubernetes-api/7bca0c989b58ca81-20190915230027270700000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733206830852:targetgroup/c3-kubernetes-api/7bca0c989b58ca81",
            "target_id": "i-0711f50c85e6210da"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:733206830852:targetgroup/c3-kubernetes-api/7bca0c989b58ca81-20190915230027248200000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733206830852:targetgroup/c3-kubernetes-api/7bca0c989b58ca81",
            "target_id": "i-0c73a51219c5b7e09"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733206830852:security-group/sg-0b64bd73136611e8c",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b64bd73136611e8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "c3-kubernetes-common",
            "name_prefix": null,
            "owner_id": "733206830852",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/c3-kubernetes": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-83d4a5f9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733206830852:security-group/sg-06eb91f3f3b07a82c",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-06eb91f3f3b07a82c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "c3-kubernetes-control_planes",
            "name_prefix": null,
            "owner_id": "733206830852",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/c3-kubernetes": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-83d4a5f9"
          }
        }
      ]
    }
  ]
}